--- a/cadastro-distribuicao.html
+++ b/cadastro-distribuicao.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="./index.html"><img src="./img/cadastros/seta-esquerda-azulclaro.png" alt=""></a>
+        <a href="./index.html" id="volta-pag"><img src="./img/cadastros/seta-esquerda-azulclaro.png" alt=""></a>
     </header>
 
     <main>
@@ -20,38 +20,40 @@
         <!--formulario-->
         <h3 id="titulo-azul-claro">Distribuidor</h3>
             <div class="row">
-                <div class="inputbox">
-                    <input type="text" id="input-azul-claro-nome" required placeholder="Nome completo">
-                    <label for="nome" id="label-azul-claro-nome">Nome</label>
+                <form action="" method="post">
+                    <div class="inputbox">
+                        <input type="text" id="input-azul-claro-nome" required placeholder="Nome completo">
+                        <label for="nome" id="label-azul-claro-nome">Nome</label>
+                    </div>
+                    <div class="inputbox">
+                        <input type="email" id="input-azul-claro-email" required placeholder="Email" onblur="validarEmail()" onfocus="redefinirMsg()">
+                        <label for="email" id="label-azul-claro-email">Email</label>
+                    </div>
+                    <div class="inputbox">
+                        <input type="text" id="input-azul-claro-telefone"  required placeholder="(XX)XXXXX-XXXX">
+                        <label for="tel" id="label-azul-claro-telefone">Telefone</label>
+                    </div>
+                    <div class="inputbox">
+                        <input type="text" id="input-azul-claro-cnpj" required placeholder="XXXX.XXX.XXX/0001-XX">
+                        <label for="cnpj" id="label-azul-claro-cnpj">CNPJ</label>
+                    </div>
+                    <div class="inputbox">
+                        <label for="disponibilidade" id="label-azul-claro-disponibilidade">Disponibilidade</label>
+                            <select id="disponibilidade-azul-claro" name="disponibilidade">
+                            <option value="frutas">Manhã</option>
+                            <option value="legumes">Tarde</option>
+                            <option value="Ambos">Noite</option>
+                            </select>
+                    </div>
                 </div>
-                <div class="inputbox">
-                    <input type="email" id="input-azul-claro-email" required placeholder="Email" onblur="validarEmail()" onfocus="redefinirMsg()">
-                    <label for="email" id="label-azul-claro-email">Email</label>
+                <div class="row">
+                    <div class="inputbox">
+                        <input type="text" id="input-azul-claro-cep" required placeholder="CEP">
+                        <label for="cep" id="label-azul-claro-cep">CEP</label>
+                    </div>
                 </div>
-                <div class="inputbox">
-                    <input type="text" id="input-azul-claro-telefone"  required placeholder="(XX)XXXXX-XXXX">
-                    <label for="tel" id="label-azul-claro-telefone">Telefone</label>
-                </div>
-                <div class="inputbox">
-                    <input type="text" id="input-azul-claro-cnpj" required placeholder="XXXX.XXX.XXX/0001-XX">
-                    <label for="cnpj" id="label-azul-claro-cnpj">CNPJ</label>
-                </div>
-                <div class="inputbox">
-                    <label for="disponibilidade" id="label-azul-claro-disponibilidade">Disponibilidade</label>
-                        <select id="disponibilidade-azul-claro" name="disponibilidade">
-                        <option value="frutas">Manhã</option>
-                        <option value="legumes">Tarde</option>
-                        <option value="Ambos">Noite</option>
-                        </select>
-                </div>
-            </div>
-            <div class="row">
-                <div class="inputbox">
-                    <input type="text" id="input-azul-claro-cep" required placeholder="CEP">
-                    <label for="cep" id="label-azul-claro-cep">CEP</label>
-                </div>
-            </div>
-            <button id="botao-azul-claro"><a href="./index.html">Criar Cadastro</a></button>
+            </form>
+            <button id="submit"><a href="./index.html">Criar Cadastro</a></button>
     </div>
     </main>
 
