--- a/login-administrador.html
+++ b/login-administrador.html
@@ -18,19 +18,21 @@
     <div id="container-vermelho">
     <h3 id="titulo-vermelho">Login do Administrador</h3>
         <div class="row">
+            <form action="" method="post">
                 <div class="inputbox">
-                    <input type="email" id="input-vermelho-email"  required placeholder="Email" onblur="validarEmail()" onfocus="redefinirMsg()">
-                    <label for="email" id="label-vermelho-email">Email</label>
+                        <input type="email" id="input-vermelho-email" placeholder="Email" required>
+                        <label for="email" id="label-vermelho-email">Email</label>
                 </div>
 
                 <div class="inputbox">
-                    <label for="senha" id="label-vermelho-senha">Senha</label>
-                    <input type="password" id="password" placeholder="Sua uma senha" required>
-                    <input type="checkbox" id="visualizar" onclick="myFunction()"><h5>Ver senha</h5>
+                        <label for="senha" id="label-vermelho-senha">Senha</label>
+                        <input type="password" id="password" placeholder="Sua uma senha" required>
+                        <input type="checkbox" id="visualizar" onclick="myFunction()"><h5>Ver senha</h5>
                 </div>
-                <button id="botao-vermelho"><a href="">Entrar</a></button>
-            </div>
-            </div>
+                    <button id="submit"><a href="">Entrar</a></button>
+                </div>
+            </form>
+        </div>
     </main>
 
     <footer>
