Removendo link da pág que só pode entrar com login

--- a/login-administrador.html
+++ b/login-administrador.html
@@ -29,7 +29,7 @@
                         <input type="password" id="password" placeholder="Sua uma senha" required>
                         <input type="checkbox" id="visualizar" onclick="myFunction()"><h5>Ver senha</h5>
                 </div>
-                    <button id="submit"><a href="">Entrar</a></button>
+                    <button id="submit"><a href="#">Entrar</a></button>
                 </div>
             </form>
         </div>
