--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
                     <button type="submit" id="cadastrar" onclick="showModal()">Cadastre-se</button>
                 </section>
 
-                <button id="submit"><a href="./alimentos.html">Entrar</a></button>
+                <button id="submit"><a href="#">Entrar</a></button>
             </form>
         </div>
 
