Adicionando efeito no cabeçalho

--- a/alimentos.html
+++ b/alimentos.html
@@ -14,12 +14,13 @@
 
 
   <!--Banner, logo e icones-->
-    <header>
-      <div id="cabecalho">
-        <img src="./img/pag-home/banner (2).png" alt="" id="banner">
-        <img src="./img/pag-home/LOGO.png" alt="" id="logo">
-        <a href="index.html"><img src="./img/alimentos/seta-esquerda-azul.png" alt="" id="seta"></a>
-      </div>
+  <div id="cabecalho">
+    <img src="./img/pag-home/banner (2).png" alt="" id="banner">
+    <img src="./img/pag-home/EFEITO.png" alt="" srcset="" id="efeito">
+    <img src="./img/pag-home/LOGO.png" alt="" id="logo">
+    <a href="index.html"><img src="./img/alimentos/seta-esquerda-azul.png" alt="" id="seta"></a>
+    <h1 id="titulo-header">Página de Cliente</h1>
+  </div>
 
       <a href="./index.html"><img src="" alt=""></a>
     </header>
